<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/search_button_frame"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:clipChildren="false"
  android:clipToPadding="false"
  android:theme="?navButtonsThemeRect">
  <LinearLayout
    android:id="@+id/search_frame"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_alignParentStart="true"
    android:background="?searchLayoutBackground"
    android:orientation="horizontal"
    android:padding="@dimen/margin_quarter"
    android:visibility="invisible"
    tools:visibility="visible">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/search_option_1"
      style="@style/MwmWidget.MapButton.Search"
      android:layout_gravity="center_vertical"
      android:layout_marginStart="50dp"
      android:contentDescription="@string/category_fuel"
      app:srcCompat="@drawable/ic_nav_search_fuel" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/search_option_2"
      style="@style/MwmWidget.MapButton.Search"
      android:layout_gravity="center_vertical"
      android:layout_marginStart="@dimen/margin_half"
      android:contentDescription="@string/category_parking"
      app:srcCompat="@drawable/ic_nav_search_parking" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/search_option_3"
      style="@style/MwmWidget.MapButton.Search"
      android:layout_gravity="center_vertical"
      android:layout_marginStart="@dimen/margin_half"
      android:contentDescription="@string/category_eat"
      app:srcCompat="@drawable/ic_nav_search_eat" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/search_option_4"
      style="@style/MwmWidget.MapButton.Search"
      android:layout_gravity="center_vertical"
      android:layout_marginStart="@dimen/margin_half"
      android:contentDescription="@string/category_food"
      app:srcCompat="@drawable/ic_nav_search_food" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/search_option_5"
      style="@style/MwmWidget.MapButton.Search"
      android:layout_gravity="center_vertical"
      android:layout_marginStart="@dimen/margin_half"
      android:contentDescription="@string/category_atm"
      app:srcCompat="@drawable/ic_nav_search_atm" />
  </LinearLayout>
</RelativeLayout>
